add waiting list endpoint; refactor sms
