# app/Http/Controllers/PassportAuthController.php
@@ -18,29 +18,6 @@ use Twilio\Exceptions\TwilioException;
 
 class PassportAuthController extends Controller
 {
-    private function sendSms(Request $request){
-        //Generate otp for sms.
-        $otp = rand(1000,9999);
-
-        //send sms otp
-        $smsOtpManager = new SmsOtpManager();
-        
-        $country_phone_details = CountryCode::where("code", $request->country_code)->first();
-        
-        //add country code to phone number string.
-        $phone_number = "".$country_phone_details['dial_code']; 
-        
-        // concatenate number without inital zero.
-        $phone_number = $phone_number.substr($request->whatsapp_number, 1);
-
-        $smsOtpManager->sendMessage("Thank you for using ECS Pay. This is your signup otp: $otp. If this request was not generated by you please reset your password as soon as possible.", $phone_number);
-
-        // store otp for verification later
-        OTPCollection::create(['otp'=> $otp, "phone" => $phone_number]);
-
-        return $otp;
-    }
-
     /**
     * @OA\Post(
     * path="/api/register",
@@ -113,7 +90,10 @@ class PassportAuthController extends Controller
 
         //send sms otp
         try {
-            $otp = $this->sendSms($request);
+            $otp = rand(1000,9999);
+            $message = "Thank you for using ECS Pay. This is your signup otp: $otp. If this request was not generated by you please reset your password as soon as possible.";
+            $smsManager = new SmsOtpManager();
+            $smsManager->sendSms($request, $message);
         }
         catch(TwilioException $e){
             return response()->json(["Error" => "Invalid phone number. Could not send otp via sms."], 400);
@@ -144,6 +124,8 @@ class PassportAuthController extends Controller
             Mail::to($request->email)->send(new OTP($email));
         }
 
+        OTPCollection::create(['otp' => $otp, "phone" => $phone_number, "created_at" => date(DATE_ATOM, time())]);
+
         return response(["status" => 200, "message" => "OTP sent to $phone_number. Kindly, check your sms to verify."]);
     }
 
@@ -160,14 +142,14 @@ class PassportAuthController extends Controller
     *    description="Verify user otp",
     *    @OA\JsonContent(
     *       required={"otp", "whatsappNumber", "countryCode"},
-    *       @OA\Property(property="otp", type="string", format="string", example="9999"),
+    *       @OA\Property(property="otp", type="number", format="string", example="9999"),
     *       @OA\Property(property="whatsapp_number", format="phone", type="string", example="0502342345"),
     *       @OA\Property(property="country_code", type="string", example="GH"),
     *    ),
     * ),
     * @OA\Response(
     *      response=201,
-    *         description="Verified Successfully",
+    *      description="'Success' : Beod has been successfully verified.'",
     *       @OA\JsonContent()
     *  ),
     *      
@@ -177,12 +159,21 @@ class PassportAuthController extends Controller
     public function verifyOtp(VerifyOtpRequest $request){
        //find user with whatsapp and country code and otp
 
-       $otp = OTPCollection::where("phone", "".$request->country_code.$request->whatsapp_number)
+        $countryCode = CountryCode::where("code", $request->country_code)->firstOrFail();
+       
+        //add country code to phone number string.
+        $phone_number = "".$countryCode['dial_code']; 
+        
+        // concatenate number without inital zero.
+        $phone_number = $phone_number.substr($request->whatsapp_number, 1);
+
+        $otp = OTPCollection::where("phone", $phone_number)
                         ->where("otp", $request->otp)
                         ->firstOrFail();
-       $user = User::where("whatsapp_number", $request->whatsapp_number)
+        //check that otp has not expired
+        // return response()->json(["otp"=> date(DATE_ATOM, time()) ]);
+        $user = User::where("whatsapp_number", $request->whatsapp_number)
                         ->where("country_code", $request->country_code)
-                        ->where("otp", $request->otp)
                         ->firstOrFail();
        //change user to verified
        $user['is_verified'] = true;
@@ -230,7 +221,10 @@ class PassportAuthController extends Controller
         $phone_number = $phone_number["dial_code"];
         $phone_number = $phone_number.substr($request->whatsapp_number, 1);
         try{
-           $otp = $this->sendSms($request);
+            $otp = rand(1000,9999);
+            $message = "Thank you for using ECS Pay. This is your signup otp: $otp. If this request was not generated by you please reset your password as soon as possible.";
+            $smsManager = new SmsOtpManager();
+            $smsManager->sendSms($request, $message);
         }
         catch(Exception $e){
             return response()->json(["Error" => "Could not send otp to".$phone_number]);
