# app/Http/Requests/AddToWaitingListRequest.php
@@ -25,7 +25,7 @@ class AddToWaitingListRequest extends FormRequest
     {
         return [
             "email" => "email",
-            "phone" => [
+            "whatsapp_number" => [
                 'regex:/^0\d{9,15}$/',
             ],
             'country_code' => 'required_unless:phone,==,null',
